--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,116 @@ body {
   background-color: black;
 }
 
-.main-container {
+#main-container {
+  display: block;
+  width: 1280px;
+  height: auto;
+  margin: auto;
+}
+
+#header {
+  display: flex;
+  color: black;
+  padding: 10px;
+  justify-content: center;
+  margin: 10px;
+}
+
+#header img {
+  width: 10%;
+  height: 10%;
+}
+
+/*#header jumbotron {
+  font-size: 50px;
+  color: black;
+  margin: 3% 2%;
+  font-family: 'American Typewriter';
+} */
+
+#container {
+  width: 100%;
+  height: 600px;
+  background-color: white;
+  text-align: center;
+  padding-top: 5%;
+}
+
+#container h1 {
+  font-size: 40px;
+  padding-bottom: 5%;
+}
+
+#container h2 {
+  font-size: 30px;
+}
+
+#explanation {
+  margin: auto;
+  margin-top: 18%;
+  width: 70%;
+  border: 5px solid black;
+}
+
+#explanation p {
+  font-size: 25px;
+  line-height: 35px;
+}
+
+#explanation .example {
+  font-weight: bold;
+}
+
+#content {
   display: block;
   width: 100%;
+  height: 400px;
+  background-image: url("../images/construction.png");
+  background-size: cover;
+}
+
+#content .construction {
+  font-size: 50px;
+  text-align: center;
+  padding: 1%;
+  color: white;
+  font-weight: bolder;
+}
+
+.content-box {
+  padding-top: 5%;
+}
+
+#content-2 {
+  margin: auto;
+  width: 1280px;
+  height: 300px;
+  background-color: #39FF14;
+  padding-top: 10%;
+}
+
+#content-2 h1 {
+  margin: auto;
+  width: 50%;
+  text-align: center;
+  color: white;
+  font-size: 100px;
+  border: 10px solid black;
+}
+
+/* Footer */
+footer {
+  width: 1280px;
+  margin: auto;
+  padding-top: 1%;
+  padding-bottom: 0.5%;
+  background-color: white;
+}
+
+footer p {
+  margin: 10px;
+}
+
+footer a {
+  text-decoration: none;
 }
